Bug 1544446 - Restrict macOS MAX_TEXTURE_SIZE to 8192. r=lsalzman

Also clean up MAX_TEXTURE_SIZE restriction code.

Differential Revision: https://phabricator.services.mozilla.com/D36144